typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.ts.stderr
error: UndefinedSymbol {
    sym: Atom('a' type=inline),
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.ts:2:8
  |
2 | delete a[b];
  |        ^

error: UndefinedSymbol {
    sym: Atom('b' type=inline),
    span: Span {
        lo: BytePos(
            23,
        ),
        hi: BytePos(
            24,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.ts:2:10
  |
2 | delete a[b];
  |          ^

